--- a/Week1/style.css
+++ b/Week1/style.css
@@ -28,7 +28,7 @@ body {
 header {
   position: sticky;
   top: 0px;
-  background-image: url(/header_resized.png);
+  background-image: url(header_resized.png);
   background-color: black;
   color: whitesmoke;
   width: 100%;
