--- a/Week1/style.css
+++ b/Week1/style.css
@@ -199,6 +199,7 @@ ul {
     max-width: 200px;
   }
 }
+/* ------------------------------PRINT------------------------------ */
 
 @media print {
   header {
