--- a/Week1/style.css
+++ b/Week1/style.css
@@ -9,6 +9,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  border: 2px solid red;
 }
 
 body {
@@ -197,6 +198,10 @@ ul {
 
   #avatar img {
     max-width: 200px;
+  }
+
+  .additional {
+    padding-right: 10px;
   }
 }
 /* ------------------------------PRINT------------------------------ */
