--- a/Week1/style.css
+++ b/Week1/style.css
@@ -71,12 +71,32 @@ address li {
 }
 header a {
   text-decoration: none;
-  color: whitesmoke;
+  color: #f5f5f5;
 }
 
 header a:hover {
   text-decoration: underline;
 }
+
+.social {
+  width: 25px;
+  background: transparent;
+  vertical-align: middle;
+  margin-right: 5px;
+}
+
+.linkedin {
+  text-align: center;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  border-radius: 50%;
+  height: 25px;
+  line-height: 20px;
+  background-color: transparent;
+  border: 2px solid white;
+}
+
 /* ------------------------------PAGE------------------------------ */
 
 main {
