--- a/Week2/style.css
+++ b/Week2/style.css
@@ -3,6 +3,10 @@
   src: url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,400&display=swap");
 }
 
+:root {
+  --margin: 10px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -56,10 +60,9 @@ p {
 .grid-item {
   padding: 0px 0px;
   list-style-type: none;
-  margin: 20px 1.15%;
+  margin: 20px var(--margin);
   background-color: #ededed;
-  transition: box-shadow 0.5s;
-  transition: transform 0.2s;
+  transition: box-shadow 0.5s, transform 0.2s;
 }
 
 .grid-item:hover {
@@ -83,19 +86,20 @@ img {
   h3 {
     height: 3em;
   }
-  .grid-item {
-    width: 31%;
-    height: 490px;
+  .grid-floats {
+    margin-left: var(--margin);
   }
 
-  /* Float grid */
   .grid-floats .grid-item {
+    width: calc(33.3% - var(--margin));
+    height: 490px;
     float: left;
+    margin: 0 var(--margin) var(--margin) 0;
   }
 
   .grid-floats li:first-of-type,
   .grid-floats li:nth-of-type(2) {
-    width: 47.7%;
+    width: calc(50% - var(--margin));
   }
 
   /* Flex grid */
@@ -103,25 +107,45 @@ img {
     clear: left;
   }
   .grid-flex {
+    margin-left: var(--margin);
     display: flex;
-    clear: left;
     flex-wrap: wrap;
+  }
+
+  .grid-flex .grid-item {
+    flex-basis: calc(33.3% - var(--margin));
+    margin: 0 var(--margin) var(--margin) 0;
+  }
+
+  .grid-flex .grid-item:first-child,
+  .grid-flex .grid-item:nth-child(2) {
+    flex-basis: calc(50% - var(--margin));
   }
 }
 
 /************************** Desktop **************************/
 @media screen and (min-width: 1024px) {
-  .grid-item {
-    width: 22.7%;
+  .grid-floats .grid-item {
+    width: calc(25% - var(--margin));
     height: 600px;
   }
 
   /* Float grid */
   .grid-floats li:first-of-type {
-    max-width: 47.7%;
+    max-width: calc(50% - var(--margin));
   }
 
   .grid-floats li:nth-of-type(2) {
-    max-width: 22.7%;
+    max-width: calc(25% - var(--margin));
+  }
+
+  /* Flex grid */
+  .grid-flex .grid-item:nth-child(2),
+  .grid-flex .grid-item {
+    flex-basis: calc(25% - var(--margin));
+  }
+
+  .grid-flex .grid-item:first-child {
+    flex-basis: calc(50% - var(--margin));
   }
 }
